downloads/qbittorrent/resources/qbittorrent-services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: downloads
  labels:
    app: qbittorrent
  name: qbittorrent-web
spec:
  ports:
    - name: "qbittorrent-web"
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  namespace: downloads
  annotations:
    lbipam.cilium.io/ips: "10.0.50.202"
  labels:
    app: qbittorrent
  name: qbittorrent-tor
spec:
  ports:
    - name: "qbittorrent-tor"
      port: 49505
      protocol: TCP
      targetPort: 49505
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: qbittorrent
