downloads/qbittorrent/resources/qbittorrent-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: downloads
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: consolidated-gateway
      namespace: gateway
  hostnames:
    - qbt.k8s.example.com
    - qbt.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent-web
          port: 8080
